--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 streamlit
+datetime
+io
+os
+PyPDF2
+python-docx
 requests
 beautifulsoup4
 markdownify
-openai
-zhipuai
-pyautogui
-pyppeteer
-requests_html
-scrapy
-docx
-PyPDF2
+click
